--- a/lang/allocator/Cargo.toml
+++ b/lang/allocator/Cargo.toml
@@ -7,7 +7,7 @@ rust-version = "1.62.1"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/mobilecoinfoundation/sgx-std"
-description = "Allocator for SGX enclave"
+description = "Global Allocator Language Item for SGX Enclaves"
 categories = ["hardware-support", "no-std"]
 keywords = ["sgx", "no-std", "alloc"]
 
